fix migrations and swagger
